darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__transclusion__condition_eval.snap
---
source: darkmatter/lib/tests/error_snapshots/transclusion.rs
expression: out
---
⤫ TransclusionError: condition evaluation failed
┃ 
┃ Failed to evaluate when="length(items) > 0":
┃ 
┃ ```md
┃    9 │ line 9
┃ > 10 │ line 10
┃   11 │ line 11
┃ ```
┃ 
┃ Error: items not found
