darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__transclusion__condition_parse.snap
---
source: darkmatter/lib/tests/error_snapshots/transclusion.rs
expression: out
---
⤫ TransclusionError: condition parse failed
┃ Failed to parse when="a &&& b":
┃ 
┃ ```md
┃       3 │ line 3
┃     > 4 │ line 4
┃       5 │ line 5
Error: unexpected token
