darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__transclusion__cycle_detected.snap
---
source: darkmatter/lib/tests/error_snapshots/transclusion.rs
assertion_line: 138
expression: out
---
⤫ TransclusionError: cycle detected
┃ Chain:
┃ 
┃   a.md :line 3
┃ 
┃   b.md :line 7
┃ 
┃   a.md :line 3
Break the cycle by removing one transclusion edge.
