darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__transclusion__file_reference.snap
---
source: darkmatter/lib/tests/error_snapshots/transclusion.rs
assertion_line: 318
expression: out
---
⤫ TransclusionError: file reference failure
┃ file reference syntax is invalid: unclosed brace
Check repository-root (`@/`) or package (`!`) prefix usage.
