darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__transclusion__invalid_frontmatter_assignment.snap
---
source: darkmatter/lib/tests/error_snapshots/transclusion.rs
expression: out
---
⤫ TransclusionError: invalid frontmatter assignment
┃ Invalid frontmatter override in directive:
┃ 
┃ ```md
┃       4 │ line 4
┃     > 5 │ line 5
┃       6 │ line 6
┃ 
┃ Value: bogus
Error: expected JSON5 object
