darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__transclusion__io_error.snap
---
source: darkmatter/lib/tests/error_snapshots/transclusion.rs
expression: out
---
⨫ TransclusionError: I/O failure
┃ file gone
Check file existence and permissions.
