darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__transclusion__max_depth_exceeded.snap
---
source: darkmatter/lib/tests/error_snapshots/transclusion.rs
expression: out
---
⨫ TransclusionError: recursion limit hit
┃ Transclusion depth exceeded the limit of 8.
Increase max_depth in frontmatter or simplify the document tree.
