darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__transclusion__missing_source_context.snap
---
source: darkmatter/lib/tests/error_snapshots/transclusion.rs
expression: out
---
⤫ TransclusionError: missing source context
┃ 
┃ Could not resolve ./sibling.md at line 4.
┃ 
┃ Note: Relative transclusions require a file-backed source.
┃ 
┃ Try using an absolute path or `@/` repo-root reference.
