darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__transclusion__missing_source_context_markup.snap
---
source: darkmatter/lib/tests/error_snapshots/transclusion.rs
assertion_line: 347
expression: out
---
⤫ TransclusionError: missing source context
┃ Could not resolve ./{{bold}}evil.md at line 1.
┃ 
┃ Note: Relative transclusions require a file-backed source.
Try using an absolute path or `@/` repo-root reference.
